let's commit everything else

--- a/resources/scss/03.generics/_index.scss
+++ b/resources/scss/03.generics/_index.scss
@@ -9,3 +9,6 @@
 /// @author Benjamin Lu <benlumia007@gmail.com>
 /// @link   https://luthemes.com/portfolio/generosity
 ////
+
+@import '01.resets/index';
+@import '02.clearings/index';
