--- a/resources/scss/07.components/_index.scss
+++ b/resources/scss/07.components/_index.scss
@@ -9,3 +9,7 @@
 /// @author Benjamin Lu <benlumia007@gmail.com>
 /// @link   https://luthemes.com/portfolio/generosity
 ////
+
+@import '01.headers/index';
+@import '02.navigations/index';
+@import '03.contents/index';
