--- a/resources/scss/08.utilities/_index.scss
+++ b/resources/scss/08.utilities/_index.scss
@@ -9,3 +9,6 @@
 /// @author Benjamin Lu <benlumia007@gmail.com>
 /// @link   https://luthemes.com/portfolio/generosity
 ////
+
+@import '01.a11y/index';
+@import '02.alignments/index';
