--- a/resources/scss/01.settings/_index.scss
+++ b/resources/scss/01.settings/_index.scss
@@ -8,3 +8,7 @@
 /// @author Benjamin Lu <benlumia007@gmail.com>
 /// @link   https://luthemes.com/portfolio/generosity
 ////
+
+@import '01.colors/index';
+@import '02.fonts/index';
+@import '03.sizes/index';
