--- a/resources/scss/04.elements/_index.scss
+++ b/resources/scss/04.elements/_index.scss
@@ -9,3 +9,6 @@
 /// @author Benjamin Lu <benlumia007@gmail.com>
 /// @link   https://luthemes.com/portfolio/generosity
 ////
+
+@import  '01.defaults/index';
+@import '02.headings/index';
