--- a/resources/scss/06.layouts/_index.scss
+++ b/resources/scss/06.layouts/_index.scss
@@ -8,3 +8,5 @@
 /// @author Benjamin Lu <benlumia007@gmail.com>
 /// @link   https://luthemes.com/portfolio/generosity
 ////
+
+@import '01.defaults/index';
