--- a/resources/scss/04.elements/_index.scss
+++ b/resources/scss/04.elements/_index.scss
@@ -10,5 +10,6 @@
 /// @link   https://luthemes.com/portfolio/generosity
 ////
 
-@import  '01.defaults/index';
+@import '01.defaults/index';
 @import '02.headings/index';
+@import '03.medias/index';
