--- a/resources/scss/07.components/_index.scss
+++ b/resources/scss/07.components/_index.scss
@@ -13,3 +13,5 @@
 @import '01.headers/index';
 @import '02.navigations/index';
 @import '03.contents/index';
+@import '04.asides/index';
+@import '05.footers/index';
